# plutosvg

./: CMakeLists.txt  README.md  meson.build
.github/: FUNDING.yml
.github/workflows/: main.yml
cmake/: plutosvgConfig.cmake.in
example/: CMakeLists.txt  example.c  svg2png.c
examples/: CMakeLists.txt  camera2png.c  emoji2png.c  meson.build  svg2png.c
source/: plutosvg-ft.h  plutosvg.c  plutosvg.h
